--- a/src/requirements.yml
+++ b/src/requirements.yml
@@ -3,3 +3,9 @@
 - src: https://github.com/scheleaap/ansible-role-env-common.git
   version: master
   name: env-common
+- src: https://github.com/scheleaap/ansible-role-mopidy.git
+  version: master
+  name: mopidy
+- src: https://github.com/scheleaap/ansible-role-snapcast.git
+  version: master
+  name: snapcast-server
