--- a/src/requirements.yml
+++ b/src/requirements.yml
@@ -14,4 +14,4 @@
   name: mopidy
 - src: https://github.com/scheleaap/ansible-role-snapcast.git
   version: master
-  name: snapcast-server
+  name: snapcast
