--- a/src/host_vars/framboos/vars.yaml
+++ b/src/host_vars/framboos/vars.yaml
@@ -1,4 +1,5 @@
 ---
 ansible_become_pass: "{{ vault_ansible_become_pass }}"
+raspberrypi_audio_mode: usb_audio_card
 snapcast_architecture: armhf
 snapcast_client_daemon_options: --soundcard 27
