--- a/src/group_vars/media_center/vars.yaml
+++ b/src/group_vars/media_center/vars.yaml
@@ -12,6 +12,6 @@ mopidy_spotify_client_secret: "{{ vault_mopidy_spotify_client_secret }}"
 mopidy_spotify_allow_cache: false
 mopidy_audio_output: "audioresample ! audioconvert ! audio/x-raw,rate=48000,channels=2,format=S16LE ! wavenc ! filesink location=/tmp/snapfifo"
 mopidy_soundcloud_auth_token: "{{ vault_mopidy_soundcloud_auth_token }}"
-snapcast_version: 0.15.0
-snapcast_version_suffix: ""
+snapcast_version: "0.19.0"
 snapcast_install_server: true
+snapcast_server_buffer_ms: 400
