--- a/group_vars/media_center/vars.yaml
+++ b/group_vars/media_center/vars.yaml
@@ -7,11 +7,15 @@ mopidy_lastfm_username: "{{ vault_mopidy_lastfm_username }}"
 mopidy_lastfm_password: "{{ vault_mopidy_lastfm_password }}"
 mopidy_spotify_username: "{{ vault_mopidy_spotify_username }}"
 mopidy_spotify_password: "{{ vault_mopidy_spotify_password }}"
+# See https://mopidy.com/ext/spotify/#authentication
 mopidy_spotify_client_id: "{{ vault_mopidy_spotify_client_id }}"
 mopidy_spotify_client_secret: "{{ vault_mopidy_spotify_client_secret }}"
 mopidy_spotify_allow_cache: false
 mopidy_audio_output: "audioresample ! audioconvert ! audio/x-raw,rate=48000,channels=2,format=S16LE ! wavenc ! filesink location=/tmp/snapfifo"
+# See https://mopidy.com/ext/soundcloud/#authentication
 mopidy_soundcloud_auth_token: "{{ vault_mopidy_soundcloud_auth_token }}"
+raspotify_backend_args: "--backend pipe --device /tmp/snapfifo"
+raspotify_device_name: "🙉"
 snapcast_version: "0.20.0"
 snapcast_install_server: true
 snapcast_server_buffer_ms: 400
