--- a/group_vars/raspberrypi/vars.yaml
+++ b/group_vars/raspberrypi/vars.yaml
@@ -1,2 +1,2 @@
 ---
-raspberrypi_shutdown_hook_command: "play -q /usr/local/share/sounds/rfid-jukebox/yaru-message-new-instant.oga -t alsa"
+raspberrypi_shutdown_hook_command: "/usr/local/share/sounds/rfid-jukebox/random.sh on-shutdown"
