--- a/group_vars/media_center/vars.yaml
+++ b/group_vars/media_center/vars.yaml
@@ -3,8 +3,10 @@ mopidy_hostname: "::"
 mopidy_iris_version: 3.50.0
 mopidy_iris_country: NL
 mopidy_iris_locale: nl_NL
+mopidy_lastfm_enabled: true
 mopidy_lastfm_username: "{{ vault_mopidy_lastfm_username }}"
 mopidy_lastfm_password: "{{ vault_mopidy_lastfm_password }}"
+mopidy_spotify_enabled: true
 mopidy_spotify_username: "{{ vault_mopidy_spotify_username }}"
 mopidy_spotify_password: "{{ vault_mopidy_spotify_password }}"
 # See https://mopidy.com/ext/spotify/#authentication
