--- a/host_vars/braam/vars.yaml
+++ b/host_vars/braam/vars.yaml
@@ -1,4 +1,4 @@
 ---
 raspberrypi_audio_mode: justboom_dac
 snapcast_architecture: armhf
-sounds_audio_device: justboom_dmix
+sounds_audio_device: dmix:CARD=sndrpijustboomd
