--- a/group_vars/media_center/vars.yaml
+++ b/group_vars/media_center/vars.yaml
@@ -1,6 +1,6 @@
 ---
 mopidy_hostname: "::"
-mopidy_iris_version: 3.57.6
+mopidy_iris_version: 3.60.1
 mopidy_iris_country: NL
 mopidy_iris_locale: nl_NL
 mopidy_lastfm_enabled: true
@@ -14,10 +14,11 @@ mopidy_spotify_client_id: "{{ vault_mopidy_spotify_client_id }}"
 mopidy_spotify_client_secret: "{{ vault_mopidy_spotify_client_secret }}"
 mopidy_spotify_allow_cache: false
 mopidy_audio_output: "audioresample ! audioconvert ! audio/x-raw,rate=44100,channels=2,format=S16LE ! wavenc ! filesink location=/tmp/snapfifo"
-mopidy_version: "3.1.1-1"
+mopidy_version: "3.2.0-1"
 raspotify_backend_args: "--backend pipe --device /tmp/snapfifo"
-raspotify_device_name: "🙉"
-raspotify_version: "0.16.0~librespot.v0.1.3-37-g0adb851"
+raspotify_device_name: "🙉 ({{ inventory_hostname }})"
+# raspotify_version: "not used right now"
 snapcast_version: "0.22.0"
 snapcast_install_server: true
 snapcast_server_buffer_ms: 400
+snapcast_server_source: "pipe:///tmp/snapfifo?name=default&sampleformat=44100:16:2"
