--- a/requirements.yml
+++ b/requirements.yml
@@ -1,4 +1,8 @@
 ---
+collections:
+- name: community.general
+
+roles:
 - src: https://github.com/scheleaap/ansible-role-env-common.git
   version: master
   name: env-common
