--- a/group_vars/media_center/vars.yaml
+++ b/group_vars/media_center/vars.yaml
@@ -18,8 +18,8 @@ mopidy_version: "3.3.0-1"
 raspotify_audio_backend: pipe
 raspotify_audio_device: /run/snapserver/snapfifo
 raspotify_device_name: "🙉 ({{ inventory_hostname }})"
-raspotify_version: "0.41.0~librespot.v0.4.1"
-snapcast_version: "0.26.0"
+raspotify_version: "0.45.0~librespot.v0.5.0-84d28e8"
+snapcast_version: "0.29.0"
 snapcast_install_server: true
 snapcast_server_buffer_ms: 400
 snapcast_server_source: "pipe:///run/snapserver/snapfifo?name=default&sampleformat=44100:16:2"
