chore: Small changes

--- a/group_vars/raspberrypi/vars.yaml
+++ b/group_vars/raspberrypi/vars.yaml
@@ -1,2 +1,3 @@
 ---
+env_common_install_docker: false
 raspberrypi_shutdown_hook_command: "/usr/local/share/sounds/rfid-jukebox/random.sh on-shutdown"
