--- a/group_vars/media_center/vars.yaml
+++ b/group_vars/media_center/vars.yaml
@@ -1,24 +1,27 @@
 ---
+mopidy_version: "3.4.2-2"
+mopidy_audio_output: "audioresample ! audioconvert ! audio/x-raw,rate=44100,channels=2,format=S16LE ! wavenc ! filesink location=/run/snapserver/snapfifo"
 mopidy_hostname: "::"
-mopidy_iris_version: 3.63.0
+
+mopidy_iris_version: "3.69.3"
 mopidy_iris_country: NL
 mopidy_iris_locale: nl_NL
-mopidy_lastfm_enabled: true
-mopidy_lastfm_username: "{{ vault_mopidy_lastfm_username }}"
-mopidy_lastfm_password: "{{ vault_mopidy_lastfm_password }}"
-mopidy_spotify_enabled: false
-mopidy_spotify_username: "{{ vault_mopidy_spotify_username }}"
-mopidy_spotify_password: "{{ vault_mopidy_spotify_password }}"
+
+mopidy_scrobbler_enabled: false
+# mopidy_scrobbler_username: "{{ vault_mopidy_scrobbler_username }}"
+# mopidy_scrobbler_password: "{{ vault_mopidy_scrobbler_password }}"
+
+mopidy_spotify_enabled: true
 # See https://mopidy.com/ext/spotify/#authentication
 mopidy_spotify_client_id: "{{ vault_mopidy_spotify_client_id }}"
 mopidy_spotify_client_secret: "{{ vault_mopidy_spotify_client_secret }}"
 mopidy_spotify_allow_cache: false
-mopidy_audio_output: "audioresample ! audioconvert ! audio/x-raw,rate=44100,channels=2,format=S16LE ! wavenc ! filesink location=/run/snapserver/snapfifo"
-mopidy_version: "3.3.0-1"
+
+raspotify_version: "0.45.0~librespot.v0.5.0-84d28e8"
 raspotify_audio_backend: pipe
 raspotify_audio_device: /run/snapserver/snapfifo
 raspotify_device_name: "🙉 ({{ inventory_hostname }})"
-raspotify_version: "0.45.0~librespot.v0.5.0-84d28e8"
+
 snapcast_version: "0.29.0"
 snapcast_install_server: true
 snapcast_server_buffer_ms: 400
